<resources>
    <string name="app_name">QuizYou</string>
    <string name="assign_test">Assign Test</string>
    <string name="grade_tests">Grade Tests</string>
    <string name="student_reports">Student Reports</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="logout">Logout</string>
    <string name="take_test">Take Test</string>
    <string name="see_results">See Results</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="make_test">Make Test</string>

</resources>
